// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Component renders with props on ios 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "red",
    }
  }
  value={true}
/>
`;

exports[`Switch Component renders with style prop 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  style={
    Object {
      "margin": 10,
    }
  }
  trackColor={
    Object {
      "false": "",
      "true": "green",
    }
  }
  value={true}
/>
`;

exports[`Switch Component renders without style prop 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "#2089dc",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should have an onValueChange event 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  disabled={true}
  trackColor={
    Object {
      "false": "",
      "true": "#ca71eb",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render determinant without issues 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": false,
      "disabled": true,
    }
  }
  disabled={true}
  trackColor={
    Object {
      "false": "",
      "true": "green",
    }
  }
  value={false}
/>
`;

exports[`Switch Component should render indeterminant without issues 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "red",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render with disabled false 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "#2089dc",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render with disabled true 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  disabled={true}
  trackColor={
    Object {
      "false": "",
      "true": "purple",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render with props on android with disabled true 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": true,
    }
  }
  disabled={true}
  thumbColor="hsl(208, 8%, 90%)"
  trackColor={
    Object {
      "false": "",
      "true": "hsl(208, 8%, 90%)",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render with props on web 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  activeThumbColor="#2089dc"
  activeTrackColor="#2089dc"
  disabled={false}
  onValueChange={[MockFunction]}
  thumbColor="#2089dc"
  value={true}
/>
`;

exports[`Switch Component should render with value 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "purple",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render without disabled 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "purple",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render without issues 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": true,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "green",
    }
  }
  value={true}
/>
`;

exports[`Switch Component should render without value 1`] = `
<Switch
  accessibilityState={
    Object {
      "checked": false,
      "disabled": false,
    }
  }
  disabled={false}
  trackColor={
    Object {
      "false": "",
      "true": "purple",
    }
  }
  value={false}
/>
`;
